# Multi-LLM-Agent

./: .gitignore  README.md  main.py  pyproject.toml
figures/: plot_figure2.py
prompts/: critical_medical_reviewer.txt
prompts/v1/: baseline.txt  critical_medical_reviewer .txt  final_medical_adjudicator.txt  medical_reasoner.txt
src/data_processed/: 1_prepare_medqa_clean.py.py
src/model/baseline/: 0shot.py  cot.py  run_single.py  test.py
src/model/cot/: cot.py
src/model/proposed/: final_adjudiator.py  model_centric_baseline.py  multiprocess_basemodel.py  run_multi_agent.py  run_pipeline.py  run_stage2.py  test_multiprocess_awq_v1.py  test_run.py
src/noise/: PubMedBERT.py  deletion.py  duplication.py  ocr.py  sentence_shuffle.py  shuffle.py  substitution.py  swap.py  typo.py
